Update www README for some Apache 2.4 changes

--- a/Local/www-service/README
+++ b/Local/www-service/README
@@ -2,16 +2,16 @@
 Contents:
 
 [1]
-httpd.conf file for apache httpd server
+config/*
+httpd.conf files for apache httpd server
 
 [2]
-Log, lock, and process ID (pid) files for running HTTP servers.
+Log and process ID (pid) files for running HTTP servers.
 
 For instance, the files for the (default) server on port 8088 are:
 
-  http.8088.fifo      -- server control file
-  http.8088.log       -- server log file
-  http.8088.pid       -- process ID of server
+  http-aftac1.8088.log       -- server log file
+  http-aftac1.8088.pid       -- process ID of server
 
 Old logs for servers that were run earlier, but have now exited,
 are kept around and truncated when a new server on that port
