move variable-length html server files to .../www-service/var/*

--- a/Local/www-service/README
+++ b/Local/www-service/README
@@ -6,12 +6,13 @@ config/*
 httpd.conf files for apache httpd server
 
 [2]
+var/*
 Log and process ID (pid) files for running HTTP servers.
 
 For instance, the files for the (default) server on port 8088 are:
 
-  http-aftac1.8088.log       -- server log file
-  http-aftac1.8088.pid       -- process ID of server
+  http-mustang2.8090.log       -- server log file
+  http-mustang2.8090.pid       -- process ID of server
 
 Old logs for servers that were run earlier, but have now exited,
 are kept around and truncated when a new server on that port
